--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 
     <!-- nav -->
-    <nav id="mainnavbar" class="navbar fixed-top navbar-dark  navbar-expand-md py-0">
+    <nav id="mainnavbar" class="navbar fixed-top navbar-dark navbar-expand-md py-0">
         <!-- brand -->
         <a class="navbar-brand ml-3" href="#">e<sup>f</sup></a>
         <!-- button -->
@@ -70,6 +70,27 @@
             <div class="col-lg-6 px-0">
                 <img class="img-fluid"
                     src="https://images.unsplash.com/photo-1441766333219-e89e835f4c1b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
+                    alt="">
+            </div>
+        </div>
+    </section>
+
+    <!-- section -->
+    <section class="container-fluid px-0">
+        <div class="row align-items-center mx-0 content">
+            <div class="col-lg-6 px-0 order-lg-2">
+                <div class="row justify-content-center">
+                    <div id="headingGroup" class="col-10 col-lg-8 text-white text-center blurb">
+                        <!-- <h1>ebb <span>&</span> flow</h1> -->
+                        <h2>Life in motion</h2>
+                        <p>Lorem ipsum dolor sit amet, aliquid neglegentur ut vel, nostro percipit vis ut. Usu bonorum labores quaestio an, vim in facilisi scripserit voluptatibus, graeci dignissim pro ea. Pri cu vivendo reformidans dissentiunt.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 px-0 order-lg-1">
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1485618609651-5a8bd6efc777?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80"
                     alt="">
             </div>
         </div>
