--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/cd490ec8ab.js"></script>
+
     <!-- custom -->
     <link rel="stylesheet" href="index.css">
 </head>
@@ -57,8 +60,8 @@
 
     <!-- section -->
     <section class="container-fluid px-0">
-        <div class="row align-items-center mx-0">
-            <div class="col-lg-6 px-0">
+        <div class="row align-items-center">
+            <div class="col-lg-6">
                 <div id="headingGroup" class="text-white text-center d-none d-lg-block">
                     <h1>ebb <span>&</span> flow</h1>
                     <h1>ebb <span>&</span> flow</h1>
@@ -67,7 +70,7 @@
                     <h1>ebb <span>&</span> flow</h1>
                 </div>
             </div>
-            <div class="col-lg-6 px-0">
+            <div class="col-lg-6">
                 <img class="img-fluid"
                     src="https://images.unsplash.com/photo-1441766333219-e89e835f4c1b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
                     alt="">
@@ -77,20 +80,60 @@
 
     <!-- section -->
     <section class="container-fluid px-0">
-        <div class="row align-items-center mx-0 content">
-            <div class="col-lg-6 px-0 order-lg-2">
+        <div class="row align-items-center content">
+            <div class="col-lg-6 order-2 order-lg-1">
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1485618609651-5a8bd6efc777?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80"
+                    alt="">
+            </div>
+            <div class="col-lg-6 text-center order-1 order-lg-2">
                 <div class="row justify-content-center">
-                    <div id="headingGroup" class="col-10 col-lg-8 text-white text-center blurb">
-                        <!-- <h1>ebb <span>&</span> flow</h1> -->
-                        <h2>Life in motion</h2>
-                        <p>Lorem ipsum dolor sit amet, aliquid neglegentur ut vel, nostro percipit vis ut. Usu bonorum labores quaestio an, vim in facilisi scripserit voluptatibus, graeci dignissim pro ea. Pri cu vivendo reformidans dissentiunt.
+                    <div class="blurb col-10 col-lg-8 text-white">
+                        <h2>Movement is life</h2>
+                        <i class="fas fa-wave-square d-none d-lg-inline"></i>
+                        <p class="lead">
+                            Be alive, run that marathon, speak to that crowd, dance to that song, sing your hopes up,
+                            shout your fears out, punch that bag, climb that wall, play that tune, solve that math,
+                            write that book, audition for that role.
                         </p>
+                        <p class="lead">
+                            There is so much we're doing with our limited time.
+                        </p>
+                        <p class="lead">
+                            And there's so much more we can do, when
+                            we have everyone on our side.
+                        </p>
+                        <br><br><br>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 px-0 order-lg-1">
+        </div>
+    </section>
+
+    <!-- section -->
+    <section class="container-fluid px-0">
+        <div class="row align-items-center content">
+            <div class="col-lg-6 text-center">
+                <div class="row justify-content-center">
+                    <div class="blurb col-10 col-lg-8 text-white">
+                        <h2>Mastery in motion</h2>
+                        <i class="fas fa-wave-square d-none d-lg-inline"></i>
+                        <p class="lead">
+                            Share your practice, get feedbacks, correct your mistakes, improve on your stengths.
+                        </p>
+                        <p class="lead">
+                            Look back and marvel at how time, consistency and tenacity can make your dreams come true.
+                        </p>
+                        <p class="lead">
+                            Now ebb back and pass the flow to the next dreamer.
+                        </p>
+                        <br><br><br>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
                 <img class="img-fluid"
-                    src="https://images.unsplash.com/photo-1485618609651-5a8bd6efc777?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80"
+                    src="https://images.unsplash.com/photo-1504647164485-1d91e1d0a112?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80"
                     alt="">
             </div>
         </div>
